# yggtray

./: .gitignore  CMakeLists.txt  Doxyfile  PeerDiscoveryDialog.cpp  PeerDiscoveryDialog.h  PeerManager.cpp  PeerManager.h  README.md  ServiceManager.h  SetupWizard.h  SocketManager.cpp  SocketManager.h  guix.scm  install-git-hooks.sh  make.sh  org.yggtray.updatepeers.policy  resources.qrc  resources.qrc.in  tray.cpp  update-peers.sh  yggtray.1
.github/workflows/: build.yml  cmake-release-build.yml  cmake-single-platform.yml
docs/html/: ServiceManager_8h.html  ServiceManager_8h__dep__incl.map  ServiceManager_8h__dep__incl.md5  ServiceManager_8h__incl.map  ServiceManager_8h__incl.md5  ServiceManager_8h_source.html  SocketManager_8h.html  SocketManager_8h__dep__incl.map  SocketManager_8h__dep__incl.md5  SocketManager_8h__incl.map  SocketManager_8h__incl.md5  SocketManager_8h_source.html  annotated.html  classServiceManager-members.html  classServiceManager.html  classServiceManager__coll__graph.map  classServiceManager__coll__graph.md5  classServiceManager_a0dcd791360858425675852bbd1c47d28_icgraph.map  classServiceManager_a0dcd791360858425675852bbd1c47d28_icgraph.md5  classServiceManager_a639f994fdf89f178ab5dad6533eb8cf7_icgraph.map  classServiceManager_a639f994fdf89f178ab5dad6533eb8cf7_icgraph.md5  classServiceManager_ae39cec3c52fed479c5e57f008baec54b_cgraph.map  classServiceManager_ae39cec3c52fed479c5e57f008baec54b_cgraph.md5  classServiceManager_ae39cec3c52fed479c5e57f008baec54b_icgraph.map  classServiceManager_ae39cec3c52fed479c5e57f008baec54b_icgraph.md5  classServiceManager_af61553a81666a1709fba22c7fe70bb96_cgraph.map  classServiceManager_af61553a81666a1709fba22c7fe70bb96_cgraph.md5  classServiceManager_af61553a81666a1709fba22c7fe70bb96_icgraph.map  classServiceManager_af61553a81666a1709fba22c7fe70bb96_icgraph.md5  classSocketManager-members.html  classSocketManager.html  classSocketManager__coll__graph.map  classSocketManager__coll__graph.md5  classSocketManager_a5c1ad70f71dad6f3e7721786b60b6cf4_icgraph.map  classSocketManager_a5c1ad70f71dad6f3e7721786b60b6cf4_icgraph.md5  classSocketManager_a80422812e4c898dcf1cabbb0f00b374c_cgraph.map  classSocketManager_a80422812e4c898dcf1cabbb0f00b374c_cgraph.md5  classSocketManager_a80422812e4c898dcf1cabbb0f00b374c_icgraph.map  classSocketManager_a80422812e4c898dcf1cabbb0f00b374c_icgraph.md5  classYggdrasilTray-members.html  (+44 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_1.js  files_0.js  files_1.js  functions_0.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js
i18n/: yggtray_ru.ts
packaging/: guix.scm
res/: resources.qrc.in
res/i18n/: yggtray_ru.ts
res/scripts/: update-peers.sh
src/: IProcessRunner.h  PeerDiscoveryDialog.cpp  PeerDiscoveryDialog.h  PeerManager.cpp  PeerManager.h  ProcessRunner.cpp  ProcessRunner.h  ServiceManager.cpp  ServiceManager.h  SetupWizard.cpp  SetupWizard.h  SocketManager.cpp  SocketManager.h  tray.cpp
tests/mocks/: MockProcessRunner.h
tests/unit/: test_example.c  test_main.cpp  test_peermanager.cpp  test_servicemanager.cpp
